...
        android:name="com.example.loops.recipeFragments.forms.AddRecipeIngredientFormFragment"
        android:label="Add a  recipe ingredient"
        tools:layout="@layout/fragment_ingredient_form">

    </fragment>
    <fragment
        android:id="@+id/editRecipeFormFragment"
        android:name="com.example.loops.recipeFragments.forms.EditRecipeFormFragment"
        android:label="Editing the Recipe"
        tools:layout="@layout/fragment_recipe_form">
        <argument
            android:name="editRecipe"
            app:argType="com.example.loops.models.Recipe" />
        <argument
            android:name="editRecipeIndex"
            app:argType="integer" />
        <action
            android:id="@+id/action_editRecipeFormFragment_to_recipeFragment"
            app:destination="@id/recipeFragment"
            app:popUpTo="@id/recipeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/addIngredientToEditRecipeForm"
            app:destination="@id/addRecipeIngredientFormFragment" />
        <action
...
        tools:layout="@layout/fragment_meal_plan_home_page" >
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_ingredientCollectionFragment"
            app:destination="@id/ingredientCollectionEditorFragment" />
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_recipeCollectionFragment"
            app:destination="@id/recipeCollectionEditorFragment" />
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_shoppingListFragment"
            app:destination="@id/shoppingListFragment" />
        <action
            android:id="@+id/action_look_at_meal_plan_detail"
            app:destination="@id/mealPlanFragment" />
...
