...

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete_popup_no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="0dp"
            android:layout_weight="1"
            android:backgroundTint="#FF6A6667"
            android:text="No" />

        <Button
            android:id="@+id/delete_popup_yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="0dp"
            android:layout_weight="1"
            android:backgroundTint="#B00020"
...
